--- a/index.html
+++ b/index.html
@@ -6,144 +6,152 @@
     <title>Седона</title>
   </head>
   <body>
-    <header class="main-header">
-      <nav class="navigation">
-        <img class='logo' src="images/logo.svg" alt="Логотип">
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостинницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <img src="images/search.svg" width="18" height="18" alt="search">
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <img src="images/like.svg" width="18" height="17" alt="like">
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-box" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
-          </li>
-        </ul>
+    <div class="page-container">
+      <header class="main-header">
+        <nav class="navigation">
+          <img class="logo" src="images/logo.svg" alt="Логотип">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-favourite" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <span class="favourite-counter">12</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-box" href="#">Хочу сюда!<span
+                  class="visually-hidden">Бронирование</span></a>
+            </li>
+          </ul>
         </nav>
-    </header>
-    <main class="main-index">
-      <div class="page-container">
-      <section class="hero">
-        <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
+      </header>
+      <main class="main-index">
+        <section class="hero">
+          <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
-          <div class="hero-line"></div>
-          <div class="hero-description">
-            <h2 class="hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-            <p class="hero-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон</p>
+        </section>
+        <section class="hero-description">
+          <h2 class="hero-title">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+          <p class="hero-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон</p>
+        </section>
+        <section class="advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+              <img src="images/sedona_view.jpg" width="800" height="385" alt="Настоящий городок">
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд-Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item">
+              <img src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+          </ul>
+        </section>
+        <section class="features">
+          <h2 class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
+          <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-title">Жилье</h3>
+              <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Еда</h3>
+              <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Сувениры</h3>
+              <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="search">
+          <h2 class="search-title">Заинтересовались?</h2>
+          <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+            Седоне</p>
+          <a class='search' href='catalog.html'>Поиск гостиницы в Седоне</a>
+        </section>
+        <section class="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+            <input type="form-email" name="email" placeholder="Ваш e-mail">
+            <button class="button button-subscribe" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </main>
+      <footer class="main-footer">
+        <div class="page-footer-container">
+          <div class="social">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="link" href="https://vk.com/htmlacademy">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" fill="none">
+                    <path fill="#83B3D3" fill-rule="evenodd"
+                      d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z"
+                      clip-rule="evenodd" />
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="link" href="https://t.me/htmlacademy">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="none">
+                    <path fill="#83B3D3"
+                      d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" />
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="link" href="https://www.youtube.com/user/htmlacademyru">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" fill="none">
+                    <path fill="#83B3D3"
+                      d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
-      </section>
-
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            <img src="images/sedona_view.jpg"  width="800" height="385" alt="Настоящий городок">
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд-Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item">
-            <img src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-        </ul>
-      </section>
-      <section class="features">
-        <h2 class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
-        <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
-        <ul class="features-list">
-          <li class="features-item">
-            <img src="images/residential.svg" width="75" height="72" alt="Жилье">
-            <h3 class="features-title">Жилье</h3>
-            <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="features-item">
-            <img src="images/food.svg" width="74" height="70" alt="Еда">
-            <h3 class="features-title">Еда</h3>
-            <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
-          </li>
-          <li class="features-item">
-            <img src="images/souvenirs.svg" width="64" height="76" alt="Сувениры">
-            <h3 class="features-title">Сувениры</h3>
-            <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="search">
-        <h2 class="search-title">Заинтересовались?</h2>
-        <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class='search' href='catalog.html'>Поиск гостиницы в Седоне</a>
-      </section>
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="form-email" name="email" placeholder="Ваш e-mail">
-          <button class="button button-subscribe" type="submit">Подписаться</button>
-        </form>
-      </section>
-      </div>
-    </main>
-    <footer class="main-footer">
-      <div class="page-footer-container">
-      <div class="social">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <ul class="social-list">
-          <li class="social-item">
-            <a class="link" href="https://vk.com/htmlacademy">
-              <img src="images/vk.svg" width="24" height="14" alt="VK">
+          <div class="phone">
+            <h2 class="visually-hidden">Номер телефона</h2>
+            <a class="link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </div>
+          <p class="about-text">
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+              <img src="images/HTML_academy_logo.svg" width="115" height="33" alt="HTML academy logo">
             </a>
-          </li>
-          <li class="social-item">
-            <a class="link" href="https://t.me/htmlacademy">
-              <img src="images/telegram.svg" width="18" height="15" alt="telegram">
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="link" href="https://www.youtube.com/user/htmlacademyru">
-              <img src="images/youtube.svg" width="22" height="17" alt="YouTube">
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="phone">
-        <h2 class="visually-hidden">Номер телефона</h2>
-        <a class="link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </div>
-      <p class="about-text">
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img src="images/HTML_academy_logo.svg" width="115" height="33" alt="HTML academy logo">
-        </a>
-      </p>
-      </div>
-    </footer>
+          </p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
