--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
       </header>
-      <main class="main-index">
+      <main class="main-container main-index">
         <section class="hero">
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
@@ -55,32 +55,39 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-              <img src="images/sedona_view.jpg" width="800" height="385" alt="Настоящий городок">
+              <div class="advantages-wrapper">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+              </div>
+              <img class="advantages-image" src="images/sedona_view.jpg" width="800" height="385"
+                alt="Настоящий городок">
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="advantages-item">
-              <h3 class="advantages-title">Красивая дорога</h3>
+              <h3 class="advantages-title">Красивая<br>дорога</h3>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
             </li>
             <li class="advantages-item">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <p class="advantages-description">Большинство едет в Гранд-Каньон и толпится там</p>
+              <h3 class="advantages-title">Мало<br>туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <img src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <img class="advantages-image" src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+              <div class="advantages-wrapper">
+                <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
+                <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
             </li>
           </ul>
         </section>
         <section class="features">
-          <h2 class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
-          <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
+          <div class="features-wrapper">
+            <h2 class="features-title">Приезжайте в Седону отдохнуть<br>в комфорте и уюте</h2>
+            <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
+          </div>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-title">Жилье</h3>
@@ -97,16 +104,19 @@
           </ul>
         </section>
         <section class="search">
-          <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
-            Седоне</p>
+          <div class="search-wrapper">
+            <h2 class="search-title">Заинтересовались?</h2>
+            <p class="search-subtitle">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
+              гостиниц в
+              Седоне</p>
+          </div>
           <a class='search' href='catalog.html'>Поиск гостиницы в Седоне</a>
         </section>
         <section class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe-description">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
           <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-            <input type="form-email" name="email" placeholder="Ваш e-mail">
+            <input type="email" name="email" placeholder="Ваш e-mail">
             <button class="button button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
