--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,9 @@
     <div class="page-container">
       <header class="main-header" data-test="header">
         <nav class="navigation">
-          <img class="logo" src="images/logo.svg" alt="Логотип">
+          <a class="logo" href="index.html">
+            <img src="images/logo.svg" alt="Логотип">
+          </a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="index.html">Главная</a>
@@ -94,9 +96,7 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="input-radio" type="radio" name="hotel-type" value="motel">
-                    Мотель
-                  </label>
+                    <input class="input-radio" type="radio" name="hotel-type" value="motel">Мотель</label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
@@ -137,9 +137,9 @@
           <div class="catalog-sort">
             <h2 class="found">Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешевое</option>
-              <option value="popular">Сначала популярное</option>
-              <option value="expensive">Сначала дорогое</option>
+              <option value="cheap">Сначала дешевые</option>
+              <option value="popular">Сначала популярные</option>
+              <option value="expensive">Сначала дорогие</option>
             </select>
             <div class="sort-wrapper">
               <button type="button" class="button-card">
