--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="page-container">
       <header class="main-header" data-test="header">
         <nav class="navigation">
-          <img class="logo" src="images/logo.svg" alt="Логотип">
+          <a class="logo" href="index.html">
+            <img src="images/logo.svg" alt="Логотип">
+          </a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link current-link" href="index.html">Главная</a>
@@ -38,8 +40,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-button" href="modal.html">Хочу сюда!
-                <span class="visually-hidden">Бронирование</span>
+              <a class="button navigation-button" href="modal.html">Хочу сюда!<span class="visually-hidden">Бронирование</span>
               </a>
             </li>
           </ul>
@@ -60,7 +61,7 @@
             <li class="advantages-item">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800px" height="385px">
             </li>
@@ -70,7 +71,7 @@
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Красивая<br>дорога</h3>
-              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Мало<br>туристов</h3>
@@ -87,12 +88,12 @@
         </section>
         <section class="features" data-test="service">
           <div class="features-wrapper">
-            <h2 class="features-title">Приезжайте в Седону отдохнуть<br>в комфорте и уюте</h2>
+            <h2 class="features-title">Приезжайте в Седону отдохнуть <br> в комфорте и уюте</h2>
             <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="features-list">
             <li class="features-item">
-              <h3 class="features-title">Жилье</h3>
+              <h3 class="features-title">Жильё</h3>
               <p class="features-description">Рекомендуем пожить<br>в настоящем мотеле,<br>все как в кино!</p>
             </li>
             <li class="features-item">
