--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
       <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="logo" href="index.html">
-            <img src="images/logo.svg" alt="Логотип">
+            <img src="images/logo.svg" alt="Логотип" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
