--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="logo" href="index.html">
-            <img src="images/logo.svg" alt="Логотип">
+            <img src="images/logo.svg" alt="Логотип" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -49,7 +49,7 @@
       <main class="main-container main-index" data-test="main">
         <section class="hero" data-test="hero">
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
-          <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
+          <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону" width="458" height="352">
         </section>
         <section class="hero-description" data-test="advantages">
           <h2 class="hero-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
