--- a/modal.html
+++ b/modal.html
@@ -13,7 +13,7 @@
     <div class="page-container">
       <header class="main-header" data-test="header">
         <nav class="navigation">
-          <img class="logo" src="images/logo.svg" alt="Логотип">
+          <img class="logo" src="images/logo.svg" alt="Логотип" width="140" height="70">
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link current-link" href="index.html">Главная</a>
@@ -47,7 +47,7 @@
       <main class="main-container main-index" data-test="main">
         <section class="hero" data-test="hero">
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
-          <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
+          <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону" width="458" height="352">
         </section>
         <section class="hero-description" data-test="advantages">
           <h2 class="hero-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
